--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                         I specialize in developing custom mobile applications for businesses, transforming concepts and ideas into secure, user-friendly, and scalable products. My focus is on building apps that not only look great but also deliver tangible results and a strong return on investment for my clients.
                     </p>
                     <!-- Upload your CV in PDF format and replace # with the link -->
-                    <a class="btn btn-dark btn-xl" href="https://drive.google.com/file/d/1lhYl2TwBIsgHGH1Np3PwLhyDEcIdqMxA/view?usp=drive_link">Download CV</a>
+                    <a class="btn btn-dark btn-xl" href="https://raw.githubusercontent.com/AhmadMahdaly/AhmedMahdaly.github.io/5ba303d7245d98a73cc411ebf9ecc1fa3442792a/assets/Ahmed%20M.%20Mahdaly%20-%20Flutter%20cv.pdf">Download CV</a>
                 </div>
             </div>
         </div>
