--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                         I specialize in developing custom mobile applications for businesses, transforming concepts and ideas into secure, user-friendly, and scalable products. My focus is on building apps that not only look great but also deliver tangible results and a strong return on investment for my clients.
                     </p>
                     <!-- Upload your CV in PDF format and replace # with the link -->
-                    <a class="btn btn-dark btn-xl" href="https://raw.githubusercontent.com/AhmadMahdaly/AhmedMahdaly.github.io/5ba303d7245d98a73cc411ebf9ecc1fa3442792a/assets/Ahmed%20M.%20Mahdaly%20-%20Flutter%20cv.pdf">Download CV</a>
+                    <a class="btn btn-dark btn-xl" href="https://raw.githubusercontent.com/AhmadMahdaly/AhmedMahdaly.github.io/b873a93cecce2712a79f30b0ac2cc567fa8c8c34/assets/Ahmed%20M.%20Mahdaly%20-%20Flutter%20cv.pdf">Download CV</a>
                 </div>
             </div>
         </div>
@@ -300,7 +300,7 @@
                 <h2 class="mb-5">Recent Projects</h2>
             </div>
             <div class="row gx-0">
-                <!-- Project 1 -->
+                <!-- Project 1 YaMakan -->
                 <div class="col-lg-6">
                     <a class="portfolio-item" href="#!" 
                         data-bs-toggle="modal" 
@@ -329,7 +329,7 @@
                         <img class="img-fluid" src="https://raw.githubusercontent.com/AhmadMahdaly/AhmedMahdaly.github.io/refs/heads/main/assets/yamakan.png" alt="Yamakan App" />
                     </a>
                 </div>
-                <!-- Project 2 -->
+                <!-- Project 2 Booklink-->
                 <div class="col-lg-6">
                     <a class="portfolio-item" href="#!"
                        data-bs-toggle="modal" 
@@ -361,7 +361,7 @@
                         <img class="img-fluid" src="https://raw.githubusercontent.com/AhmadMahdaly/AhmedMahdaly.github.io/refs/heads/main/assets/Cover.jpg" alt="Booklink تبادل الكتب" />
                     </a>
                 </div>
-                    
+                    <!-- Project 3 Entalek-->
                 <div class="col-lg-6">
                     <a class="portfolio-item" href="#!"
                        data-bs-toggle="modal" 
@@ -380,7 +380,7 @@ Key Features for Your Business:
 • Transparent Pricing: Know the cost before you confirm the order.
 • Reliable Service: Vetted drivers and quality control ensure professional service."
                        data-google-play="https://play.google.com/store/apps/details?id=com.sitksa.entalek"
-                       data-app-store=""
+                       data-app-store="https://apps.apple.com/sa/app/entalek/id6749046901"
                        data-behance="">
                         <div class="caption">
                             <div class="caption-content">
